Implementação da página de Ações e Projetos, bem como a inclusão de relatórios para download; Alteração da regra de reescrita da url; Adequação de links para url amigáveis

--- a/.htaccess
+++ b/.htaccess
@@ -1,10 +1,8 @@
-Options -Indexes
+Options All -Indexes
 
-<IfModule mod_rewrite.c>
-
-RewriteEngine on
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteCond %{REQUEST_FILENAME}\.php -f
-RewriteRule ^([^/]+)/$ $1.php
-
-</IfModule>
+# REMOVE PHP FROM URL
+# REMOVE PHP EXTENSION
+RewriteEngine on 
+RewriteCond %{REQUEST_FILENAME} !-d 
+RewriteCond %{REQUEST_FILENAME}\.php -f 
+RewriteRule ^(.*)$ $1.php
